--- a/index.html
+++ b/index.html
@@ -93,13 +93,13 @@
     .pfp{
       width:250px;
       height:250px;
-      border-radius:50%;
-      object-fit:contain;       /* changed from cover to contain */
+      border-radius:30%;
+      object-fit:cover;       /* changed from cover to contain */
       background-color:#fff;    /* adds padding around edges */
       box-shadow:0 10px 25px rgba(0,0,0,0.6);
       display:block;
       margin-bottom:20px;
-      padding:8px;              /* adds a clean white ring */
+      padding:6px;              /* adds a clean white ring */
     }
 
     /* CONTACT BOX */
