--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
     .pfp{
       width:250px;
       height:250px;
-      border-radius:30%;
-      object-fit:cover;       /* changed from cover to contain */
+      border-radius:50%;
+      object-fit:fill;       /* changed from cover to contain */
       background-color:#fff;    /* adds padding around edges */
       box-shadow:0 10px 25px rgba(0,0,0,0.6);
       display:block;
