--- a/index.html
+++ b/index.html
@@ -94,7 +94,9 @@
       width:250px;
       height:250px;
       border-radius:50%;
-      object-fit:cover;       /* changed from cover to contain */
+      object-fit:cover;
+      object-position: top center; /* moves the image slightly down */
+                                      /* changed from cover to contain */
       background-color:#fff;    /* adds padding around edges */
       box-shadow:0 10px 25px rgba(0,0,0,0.6);
       display:block;
