--- a/index.html
+++ b/index.html
@@ -174,45 +174,44 @@ document.addEventListener("DOMContentLoaded", () => {
 
 <!-- TECHNICAL STACK (placed AFTER experience) -->
 <!-- TECHNICAL STACK -->
+<!-- TECHNICAL STACK -->
 <section id="stack" class="section glass-wrap">
   <header class="section-head">
     <h2 class="section-title">Technical Stack</h2>
-    <p class="section-sub">A collection of languages, platforms, and tools I’ve used across geospatial analytics and data-science projects.</p>
+    <p class="section-sub">
+      A collection of languages, platforms, and tools I’ve used across geospatial analytics and data-science projects.
+    </p>
   </header>
 
   <div class="skills-grid">
     <!-- Programming -->
-    <div class="skill-card"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/python/python-original.svg" alt="Python"><span>Python</span></div>
-    <div class="skill-card"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/r/r-original.svg" alt="R"><span>R Language</span></div>
-    <div class="skill-card"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg" alt="JavaScript"><span>JavaScript</span></div>
-    <div class="skill-card"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-original.svg" alt="HTML"><span>HTML</span></div>
-    <div class="skill-card"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/css3/css3-original.svg" alt="CSS"><span>CSS</span></div>
+    <div class="skill-card pop"><img src="assets/logo/python.svg" alt="Python"><span>Python</span></div>
+    <div class="skill-card pop"><img src="assets/logo/r.svg" alt="R Language"><span>R Language</span></div>
+    <div class="skill-card pop"><img src="assets/logo/javascript.svg" alt="JavaScript"><span>JavaScript</span></div>
+    <div class="skill-card pop"><img src="assets/logo/html.svg" alt="HTML"><span>HTML</span></div>
+    <div class="skill-card pop"><img src="assets/logo/css.svg" alt="CSS"><span>CSS</span></div>
 
     <!-- GIS / Remote Sensing -->
-    <div class="skill-card"><img src="https://upload.wikimedia.org/wikipedia/commons/3/3b/ArcGIS_logo.png" alt="ArcGIS"><span>ArcGIS</span></div>
-    <div class="skill-card"><img src="https://upload.wikimedia.org/wikipedia/commons/8/8a/QGIS_logo_new.svg" alt="QGIS"><span>QGIS</span></div>
-    <div class="skill-card"><img src="https://upload.wikimedia.org/wikipedia/commons/4/49/Google_Earth_Engine_logo.svg" alt="GEE"><span>Google Earth Engine</span></div>
-    <div class="skill-card"><img src="https://upload.wikimedia.org/wikipedia/commons/2/2f/ArcGIS_Pro_logo.svg" alt="ArcGIS Pro"><span>ArcGIS Pro</span></div>
-    <div class="skill-card"><img src="https://upload.wikimedia.org/wikipedia/commons/1/1a/ENVI_Logo.png" alt="ENVI"><span>ENVI</span></div>
+    <div class="skill-card pop"><img src="assets/logo/arcgis.png" alt="ArcGIS"><span>ArcGIS</span></div>
+    <div class="skill-card pop"><img src="assets/logo/arcgispro.png" alt="ArcGIS Pro"><span>ArcGIS Pro</span></div>
+    <div class="skill-card pop"><img src="assets/logo/qgis.png" alt="QGIS"><span>QGIS</span></div>
+    <div class="skill-card pop"><img src="assets/logo/gee.png" alt="Google Earth Engine"><span>Google Earth Engine</span></div>
 
     <!-- Data & Cloud -->
-    <div class="skill-card"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/postgresql/postgresql-original.svg" alt="PostgreSQL"><span>PostgreSQL</span></div>
-    <div class="skill-card"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/mysql/mysql-original.svg" alt="SQL"><span>SQL</span></div>
-    <div class="skill-card"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/mongodb/mongodb-original.svg" alt="MongoDB"><span>MongoDB</span></div>
-    <div class="skill-card"><img src="https://seeklogo.com/images/S/supabase-logo-DCC676FFE2-seeklogo.com.png" alt="Supabase"><span>Supabase</span></div>
-    <div class="skill-card"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/googlecloud/googlecloud-original.svg" alt="Google Cloud"><span>Google Cloud</span></div>
-    <div class="skill-card"><img src="https://upload.wikimedia.org/wikipedia/commons/9/93/Amazon_Web_Services_Logo.svg" alt="AWS"><span>AWS</span></div>
+    <div class="skill-card pop"><img src="assets/logo/postgresql.svg" alt="PostgreSQL"><span>PostgreSQL</span></div>
+    <div class="skill-card pop"><img src="assets/logo/mysql.svg" alt="SQL"><span>SQL</span></div>
+    <div class="skill-card pop"><img src="assets/logo/mongodb.svg" alt="MongoDB"><span>MongoDB</span></div>
+    <div class="skill-card pop"><img src="assets/logo/supabase.png" alt="Supabase"><span>Supabase</span></div>
+    <div class="skill-card pop"><img src="assets/logo/google-cloud.svg" alt="Google Cloud"><span>Google Cloud</span></div>
+    <div class="skill-card pop"><img src="assets/logo/aws.svg" alt="AWS"><span>AWS</span></div>
 
     <!-- Visualization / Office -->
-    <div class="skill-card"><img src="https://upload.wikimedia.org/wikipedia/commons/4/4b/Tableau_Logo.png" alt="Tableau"><span>Tableau</span></div>
-    <div class="skill-card"><img src="https://streamlit.io/images/brand/streamlit-mark-color.png" alt="Streamlit"><span>Streamlit</span></div>
-    <div class="skill-card"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original.svg" alt="GitHub"><span>GitHub</span></div>
-    <div class="skill-card"><img src="https://upload.wikimedia.org/wikipedia/commons/5/5f/Microsoft_Office_logo_%282019–present%29.svg" alt="Office"><span>Microsoft Office</span></div>
+    <div class="skill-card pop"><img src="assets/logo/tableau.png" alt="Tableau"><span>Tableau</span></div>
+    <div class="skill-card pop"><img src="assets/logo/streamlit.png" alt="Streamlit"><span>Streamlit</span></div>
+    <div class="skill-card pop"><img src="assets/logo/github.svg" alt="GitHub"><span>GitHub</span></div>
+    <div class="skill-card pop"><img src="assets/logo/office.png" alt="Microsoft Office"><span>Microsoft Office</span></div>
   </div>
 </section>
-
-
-
 
 
 <footer>© Somia Asim</footer>
