--- a/index.html
+++ b/index.html
@@ -183,34 +183,34 @@ document.addEventListener("DOMContentLoaded", () => {
     </p>
   </header>
 
-  <div class="skills-grid">
-    <!-- Programming -->
-    <div class="skill-card pop"><img src="assets/logo/python.svg" alt="Python"><span>Python</span></div>
-    <div class="skill-card pop"><img src="assets/logo/r.svg" alt="R Language"><span>R Language</span></div>
-    <div class="skill-card pop"><img src="assets/logo/javascript.svg" alt="JavaScript"><span>JavaScript</span></div>
-    <div class="skill-card pop"><img src="assets/logo/html.svg" alt="HTML"><span>HTML</span></div>
-    <div class="skill-card pop"><img src="assets/logo/css.svg" alt="CSS"><span>CSS</span></div>
-
-    <!-- GIS / Remote Sensing -->
-    <div class="skill-card pop"><img src="assets/logo/arcgis.png" alt="ArcGIS"><span>ArcGIS</span></div>
-    <div class="skill-card pop"><img src="assets/logo/arcgispro.png" alt="ArcGIS Pro"><span>ArcGIS Pro</span></div>
-    <div class="skill-card pop"><img src="assets/logo/qgis.png" alt="QGIS"><span>QGIS</span></div>
-    <div class="skill-card pop"><img src="assets/logo/gee.png" alt="Google Earth Engine"><span>Google Earth Engine</span></div>
-
-    <!-- Data & Cloud -->
-    <div class="skill-card pop"><img src="assets/logo/postgresql.svg" alt="PostgreSQL"><span>PostgreSQL</span></div>
-    <div class="skill-card pop"><img src="assets/logo/mysql.svg" alt="SQL"><span>SQL</span></div>
-    <div class="skill-card pop"><img src="assets/logo/mongodb.svg" alt="MongoDB"><span>MongoDB</span></div>
-    <div class="skill-card pop"><img src="assets/logo/supabase.png" alt="Supabase"><span>Supabase</span></div>
-    <div class="skill-card pop"><img src="assets/logo/google-cloud.svg" alt="Google Cloud"><span>Google Cloud</span></div>
-    <div class="skill-card pop"><img src="assets/logo/aws.svg" alt="AWS"><span>AWS</span></div>
-
-    <!-- Visualization / Office -->
-    <div class="skill-card pop"><img src="assets/logo/tableau.png" alt="Tableau"><span>Tableau</span></div>
-    <div class="skill-card pop"><img src="assets/logo/streamlit.png" alt="Streamlit"><span>Streamlit</span></div>
-    <div class="skill-card pop"><img src="assets/logo/github.svg" alt="GitHub"><span>GitHub</span></div>
-    <div class="skill-card pop"><img src="assets/logo/office.png" alt="Microsoft Office"><span>Microsoft Office</span></div>
+  <div class="skills-belts glass">
+  <!-- Row A – moves L→R -->
+  <div class="belt-row belt-a">
+    <div class="skill-pill"><img src="assets/logo/python.svg" alt=""><span>python</span></div>
+    <div class="skill-pill"><img src="assets/logo/r.svg" alt=""><span>r language</span></div>
+    <div class="skill-pill"><img src="assets/logo/javascript.svg" alt=""><span>javascript</span></div>
+    <div class="skill-pill"><img src="assets/logo/html.svg" alt=""><span>html</span></div>
+    <div class="skill-pill"><img src="assets/logo/css.svg" alt=""><span>css</span></div>
+    <div class="skill-pill"><img src="assets/logo/arcgis.svg" alt=""><span>arcgis</span></div>
+    <div class="skill-pill"><img src="assets/logo/qgis.svg" alt=""><span>qgis</span></div>
+    <div class="skill-pill"><img src="assets/logo/gee.svg" alt=""><span>earth engine</span></div>
+    <div class="skill-pill"><img src="assets/logo/arcgispro.png" alt=""><span>arcgis pro</span></div>
   </div>
+
+  <!-- Row B – moves R→L -->
+  <div class="belt-row belt-b">
+    <div class="skill-pill"><img src="assets/logo/postgresql.svg" alt=""><span>postgresql</span></div>
+    <div class="skill-pill"><img src="assets/logo/mysql.svg" alt=""><span>sql</span></div>
+    <div class="skill-pill"><img src="assets/logo/mongodb.svg" alt=""><span>mongodb</span></div>
+    <div class="skill-pill"><img src="assets/logo/supabase.png" alt=""><span>supabase</span></div>
+    <div class="skill-pill"><img src="assets/logo/google-cloud.svg" alt=""><span>google cloud</span></div>
+    <div class="skill-pill"><img src="assets/logo/aws.svg" alt=""><span>aws</span></div>
+    <div class="skill-pill"><img src="assets/logo/github.svg" alt=""><span>github</span></div>
+    <div class="skill-pill"><img src="assets/logo/streamlit.png" alt=""><span>streamlit</span></div>
+    <div class="skill-pill"><img src="assets/logo/msoffice.svg" alt=""><span>microsoft office</span></div>
+  </div>
+</div>
+
 </section>
 
 
@@ -227,6 +227,24 @@ document.addEventListener("DOMContentLoaded", () => {
     });
   }, { threshold: 0.15 });
   cards.forEach(card => io.observe(card));
+});
+</script>
+<script>
+document.addEventListener('DOMContentLoaded', () => {
+  const belts = document.querySelector('.skills-belts');
+  if(!belts) return;
+
+  const io = new IntersectionObserver((entries) => {
+    entries.forEach(e => {
+      if (e.isIntersecting) {
+        belts.classList.add('play');
+      } else {
+        belts.classList.remove('play');
+      }
+    });
+  }, { threshold: 0.15 });
+
+  io.observe(belts);
 });
 </script>
 </body>
